<resources>

    <string name="app_name">Mahabharti</string>
    <string name="app_payoff">महाराष्ट्रातील सर्व जॉब अपडेट्स</string>

    <!-- If you want to use RTL (right to left) version, set true -->
    <string name="rtl_version" translatable="false">false</string>

    <!-- Splash screen delay (milliseconds) 1500 = 1,5 seconds -->
    <string name="splash_delay" translatable="false">4000</string>

    <!-- Google Analytics OPTIONAL -->
    <string name="analytics_property_id" translatable="false"></string>

    <!-- For use GCM you need to set your Google Api Project Number -->

    <!-- For use Google Maps you need to set your Google Maps API Key -->
    <string name="gmap_key" translatable="false"></string>
    <string name="coordinate_lat" translatable="false">40.708105</string>
    <string name="coordinate_long" translatable="false">-74.006307</string>


    <!-- Server to register token (for push notification) OPTIONAL -->
    <string name="db_field_token" translatable="false">user_android_token</string>
    <string name="db_field_latitude" translatable="false">user_lat</string>
    <string name="db_field_longitude" translatable="false">user_lon</string>
    <string name="db_field_appversion" translatable="false">user_app_version</string>
    <string name="server_url" translatable="false">#</string>

    <!-- AD Mob Publusher ID -->

    <!-- Share text and link for Share Button -->


    <!-- DO mot touch notification channel below-->
    <string name="channel_id" translatable="false">Default</string>

    <!-- ######################################### Page Configs ################################## -->

    <!-- Type: "url" for web remote pages, "file" for local pages -->

    <string name="home_label">मुखपृष्ठ</string>
    <string name="home_type">url</string>
    <string name="home_url">https://mahabharti.in/</string>
    <!--sub category 1-->
    <string name="about_us_label">जाहिराती</string>
    <string name="about_us_type">url</string>
    <string name="about_us_url">https://mahabharti.in/recruitments/</string>
    <!--sub category 2-->
    <string name="portfolio_label">प्रवेशपत्र</string>
    <string name="portfolio_type">url</string>
    <string name="portfolio_url">https://mahabharti.in/hall-tickets/</string>
    <!--sub category 3-->
    <string name="contacts_label">निकाल</string>
    <string name="contacts_type">url</string>
    <string name="contacts_url">https://mahabharti.in/results/</string>
    <!--sub category 4-->
    <string name="second_category">Extra Features</string>
    <string name="settings_label">Settings</string>
    <!--sub category 1-->
    <string name="remote_label">Our Social Network</string>
    <string name="remote_type">file</string>
    <string name="remote_url">socialhub.html</string>

    <string name="interactive_label">Join Whatsapp</string>
    <string name="interactive_type">url</string>
    <string name="interactive_url">https://mahabharti.in/jobs-on-whatsapp/</string>

    <string name="credits_label">About Us</string>
    <string name="credits_type">url</string>
    <string name="credits_url">https://mahabharti.in/about-us/</string>
    <string name="share_linker" translatable="false">This is the Important Job Update :</string>

    <string name="help_label">मदतकेंद</string>
    <string name="help_type">url</string>
    <string name="help_url">https://mahabharti.in/helpline/</string>

    <!-- If you want, you can customize the error page! -->
    <string name="error_page">error.html</string>


    <!-- ########################################## STRINGS ######################################  -->
    <!-- String for translate -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">WebView Settings</string>

    <string name="pref_title_cache">Enable Cache</string>
    <string name="pref_title_javascript">Enable Javascript</string>
    <string name="pref_title_geolocation">Update GPS Coordinates</string>
    <string name="pref_title_gps_remoember">GPS Check Dialog</string>

    <string name="pref_title_webview_loader">Loader option</string>
    <string-array name="pref_webview_loader_titles">
        <item>Pull-to-Refresh</item>
        <item>Progress Dialog</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_webview_loader_values">
        <item>pull</item>
        <item>dialog</item>
        <item>never</item>
    </string-array>

    <!-- GPS -->
    <string name="gps_dialog_title">Geo-based push (optional)</string>
    <string name="gps_dialog_message">Do you want receive Geo Push notifications? If you want to try the Geo Push Panel: http://goo.gl/gsj5nO</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_header_geolocation">Geolocation</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
