<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_label" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_newspaper_o"
            android:title="@string/about_us_label" />
        <item
            android:id="@+id/portfolio"
            android:icon="@drawable/ic_slideshare"
            android:title="@string/portfolio_label" />
        <item
            android:id="@+id/contacts"
            android:icon="@drawable/ic_pencil_square"
            android:title="@string/contacts_label" />
    </group>

    <item android:title="@string/second_category">
        <menu>
            <item
                android:id="@+id/nav_1"
                android:icon="@mipmap/settings"
                android:title="@string/settings_label" />
            <item
                android:id="@+id/nav_2"
                android:icon="@mipmap/web58"
                android:title="@string/remote_label" />
            <item
                android:id="@+id/nav_3"
                android:icon="@drawable/ic_whatsapp"
                android:title="@string/interactive_label" />

            <item
                android:id="@+id/nav_4"
                android:icon="@drawable/ic_info_circle"
                android:title="@string/credits_label" />
        </menu>
    </item>




</menu>